# lumia-kenkyu

./: .gitignore  CONTRIB.md  README.md  pyproject.toml  response_1720495456513.json
src/ingest/: README.md  data.json  er_api_cli.py  er_api_interface.py
src/ingest/l10n_data/: README.md  convert.py  import_jsons_supabase.py  l10n_data_splitter.py
src/ingest/l10n_data/jsons/: area_codes.json  area_name.json  armortype_arm.json  armortype_chest.json  armortype_head.json  armortype_leg.json  armortype_trinket.json  buttontype_cancel.json  buttontype_confirm.json  castingactiontype_airsupplyopen.json  castingactiontype_ardareinforceactive3interact.json  castingactiontype_areasecuritycamerasight.json  castingactiontype_autoresurrection.json  castingactiontype_boxopen.json  castingactiontype_carepackageopen.json  castingactiontype_collectibleopen.json  castingactiontype_collectibleopenflower.json  castingactiontype_collectibleopenfreshwaterfish.json  castingactiontype_collectibleopenmeteorite.json  castingactiontype_collectibleopenpotato.json  castingactiontype_collectibleopenseafish.json  castingactiontype_collectibleopenstone.json  castingactiontype_collectibleopentreeoflife.json  castingactiontype_collectibleopenwood.json  (+1052 more)
src/ingest/models/: er_api_metadata_model.py
src/matches/: CONSTS.py  README.md  game_data_cli.py  getter.py  grouper.py  inserter.py  match-retrieval-readme.md
src/matches/data_access/: dao.py  dragonflydb.py  postgres.py  supabase.py
src/matches/models/: game.py  user.py
src/matches/processors/: insertion_processors.py  prepare_processors.py
(+3557 files in other folders)
