[tool.poetry]
name = "lumia-kenkyu"
version = "0.1.0"
description = "Research and data related information for the MOBA Eternal Return by Nimble Neuron"
authors = ["Wes Hahn <westly.hahn@gmail.com>"]
license = "GNU AGPLv3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ruff = "^0.5.0"
black = "^24.4.2"
pydantic = "^2.8.0"
supabase = "^2.5.1"
requests = "^2.32.3"
pendulum = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
